texi2html/test/invalid/res_all/texi_verb_and_char_end_of_line/verb_and_char_end_of_line.texi
\input texinfo @c -*-texinfo-*-

@setfilename verb_and_char_end_of_line.info

@settitle in set title @verb{*

@node Top

texte

some @verb{*

In verb


*}

Another verb, not  closed @verb{*

@bye
